test/conformance/chainsaw/mutate/clusterpolicy/cornercases/jmespath-with-special-chars/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  labels:
    deploy-zone: frankfurt
    corp.com/retention: days_37
spec:
  terminationGracePeriodSeconds: 10
  containers:
    - name: busybox
      image: busybox:stable
      command: ["sleep", "600"]
