test/conformance/chainsaw/mutate/clusterpolicy/cornercases/jmespath-with-special-chars/resources-assert.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  labels:
    deploy-zone: FRANKFURT
    corp.com/retention: days_30
