test/conformance/chainsaw/mutate/clusterpolicy/cornercases/jmespath-with-special-chars/01-deployment.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: deployment
spec:
  timeouts: {}
  try:
  - apply:
      file: resources.yaml
  - assert:
      file: resources-assert.yaml
