test/conformance/chainsaw/mutate/clusterpolicy/cornercases/jmespath-with-special-chars/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: jmespath-with-special-chars
spec:
  concurrent: false
  steps:
  - name: create policy
    use:
      template: ../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: jmespath-with-special-chars-demo
  - name: step-01
    try:
    - apply:
        file: resources.yaml
    - assert:
        file: resources-assert.yaml
